--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -9,7 +9,8 @@
 	"dependencies": {
 		"@babel/cli": "^7.1.2",
 		"@babel/core": "^7.1.2",
-		"babel-preset-react-app": "^7.0.0"
+		"babel-preset-react-app": "^7.0.0",
+		"next-optimized-images": "^2.5.0"
 	},
 	"peerDependencies": {
 		"prop-types": "^15.6.2",
