--- a/packages/landing/package.json
+++ b/packages/landing/package.json
@@ -46,6 +46,7 @@
 		"docz": "^0.13.7",
 		"imagemin-mozjpeg": "^8.0.0",
 		"imagemin-optipng": "^6.0.0",
-		"imagemin-svgo": "^7.0.0"
+		"imagemin-svgo": "^7.0.0",
+		"webp-loader": "^0.4.0"
 	}
 }
